git/1.0.1/README.md
# Git (git)

Плагин Usee: текущая ветка и незакоммиченные изменения указанной папки на дисплее.
Демонстрация **`ctx.exec`** (SDK 5).

## Как это работает
Git-состояние живёт в файлах `.git/` + CLI, к которым у песочницы нет доступа.
Поэтому плагин использует `ctx.exec` — но **не запускает произвольное**: в манифесте
задекларированы ровно две команды, они показываются пользователю на экране
разрешений перед установкой:
```
git -C ‹repo› rev-parse --abbrev-ref HEAD     ← ветка
git -C ‹repo› diff --numstat HEAD             ← +добавлено / −удалено по файлам
```
Плагин передаёт только значение дырки `{repo}` (= настройка `repoPath`); хост
проверяет, что путь остаётся под `repoPath`, и сам собирает argv (без shell).

## Карточки
- **status «ветка»** — иконка + имя ветки, `+N −M · K файлов`, бейдж = число
  изменённых файлов; «не git-репозиторий», если папка не под git.
- **meters «файлы»** — топ-4 изменённых файла по числу строк (относительные бары).

Число изменённых файлов уходит на шину значений (`number`) — для условий/HA.

## Настройки
| Ключ | Тип | Назначение |
|------|-----|-----------|
| `repoPath` | string | Папка репозитория (она же корень для `{repo}`) |
| `card` | select | `both` / `status` / `meters` |
| `label` | string | подпись (по умолчанию — имя ветки) |
| `intervalSec` | number | период опроса, 2–300 с (по умолчанию 10) |
| `width`, `minW`, `maxW` | — | ширина карточек |

## Права
`permissions: {}` (сети нет). Доступ к командам — через задекларированный блок
`exec`, а не через `permissions`. `{repo}` типа `path` привязан к `setting:repoPath`
(значение не может выйти за эту папку).

## Требования
- **Агент с поддержкой SDK 5** (`ctx.exec`) — иначе манифест `sdk:5` отклонится.
- **`git` в PATH.**

## Локальная проверка
Скопировать `manifest.json` + `plugin.js` в
`%AppData%\PcMonitorAgent\plugins\git\1.0.0\`, включить плагин (согласиться с
показанными командами), указать папку репозитория.
