git/1.1.0/README.md
# Git (git)

Плагин Usee: текущая ветка и незакоммиченные изменения указанной папки на дисплее.
Демонстрация **`ctx.exec`**; SDK 8.

## Как это работает
Git-состояние живёт в файлах `.git/` + CLI, к которым у песочницы нет доступа.
Поэтому плагин использует `ctx.exec` — но **не запускает произвольное**: в манифесте
задекларированы ровно две команды, они показываются пользователю на экране
разрешений перед установкой:
```
git -C ‹repo› rev-parse --abbrev-ref HEAD     ← ветка
git -C ‹repo› diff --numstat HEAD             ← +добавлено / −удалено по файлам
```
Плагин передаёт только значение дырки `{repo}` (= настройка `repoPath`); хост
проверяет, что путь остаётся под `repoPath`, и сам собирает argv (без shell).

## Карточки
- **status «ветка»** — встроенная иконка `git-branch` + имя ветки, `+N −M · K файл.`;
  «не git-репозиторий», если папка не под git.
- **meters «файлы»** — топ-4 изменённых файла по числу строк (относительные бары).

Число изменённых файлов уходит на шину значений (`number`) — для условий/HA.
Какие карточки показывать — раскладка сцен Usee, ширина — настройки карточки Usee.

## Настройки
| Ключ | Тип | Назначение |
|------|-----|-----------|
| `repoPath` | string | Папка репозитория (выбор папки; она же корень для `{repo}`) |
| `label` | string | подпись (по умолчанию — имя ветки) |
| `intervalSec` | number | период опроса, 2–300 с (по умолчанию 10) |

## Права
`permissions: {}` (сети нет). Доступ к командам — через задекларированный блок
`exec`, а не через `permissions`. `{repo}` типа `path` привязан к `setting:repoPath`
(значение не может выйти за эту папку).

## Требования
- **Агент с SDK 8** (Usee ≥ 1.5.0) — иначе манифест отклонится с «обновите Usee».
- **`git` в PATH.**

## Локальная проверка
Агент → «Плагины» → **＋ «Плагин из папки разработки…»** → эта папка (согласиться с
показанными командами, указать папку репозитория). Или скопировать `manifest.json`
+ `plugin.js` в `%AppData%\PcMonitorAgent\plugins\git\1.1.0\`.
